# mineru-runpod

./: .dockerignore  .env.example  .gitattributes  .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  commitlint.config.js  deploy.py  destroy.py  handler.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  commitlint.yml  docker-ghcr.yml  release.yml
.runpod/: handler.py  hub.json  tests.json
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/blog/: 2026-06-03-clause-aligned-batching-large-pdf-mineru.mdx  2026-06-08-self-host-mineru-api.mdx
docs/src/content/docs/getting-started/: clients.mdx  deploy.mdx  migrate-from-mineru-api.mdx  overview.mdx
docs/src/content/docs/guides/: choosing-gpu.mdx  concurrency.mdx  network-volumes.mdx  observability.mdx  scaling.mdx  troubleshooting.mdx
docs/src/content/docs/reference/: api.mdx
examples/: mineru_api_compat_example.py  parse_b64_example.py  parse_url_example.py  parser_adapter_example.py
mineru_client/: __init__.py  _mapping.py  api_compat.py  client.py
tests/: conftest.py  test_api_compat.py  test_client.py  test_handler.py
worker/: parse.py  schema.py  telemetry.py  warmup.py
