# Defines the `mineru_client` Python package that callers `pip install -e` to
# talk to a deployed mineru-runpod endpoint. Consumers don't need MinerU or
# CUDA — just the runpod SDK.

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mineru-client"
version = "1.1.25"
description = "Python client for the mineru-runpod serverless service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "runpod>=1.7",
]

[project.optional-dependencies]
deploy = [
    # Used by deploy.py / destroy.py on the operator's machine.
    "python-dotenv>=1.0",
]
test = [
    # CI runs these without a GPU. Worker-side deps that the handler imports
    # at module load (httpx, runpod) are needed; mineru itself is NOT — its
    # import is wrapped in try/except inside handler.py.
    "pytest>=7",
    "httpx>=0.27",
    "runpod>=1.7",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mineru_client"]

[tool.hatch.build.targets.sdist]
include = [
    "mineru_client/**",
    "README.md",
    "pyproject.toml",
]
